[package]
name = "aqua_parse"
version = "0.25.0"
edition = "2021"
description = "A parser library."
license = "MIT"
repository = "https://github.com/hldprk/aqua_parse"
documentation = "https://docs.rs/aqua_parse"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
pattern = []

[dependencies]
aqua_parse_macro = { path = "../aqua_parse_macro", version="0.14.0" }
aqua_error = { path = "../../aqua_error", version="0.2.0" }
regex = "1.5.4"
