[package]
name = "aqua_parse_macro"
version = "0.14.0"
edition = "2021"
keywords = ["parser", "macro", "derive", "aqua"]
description = "The macro used in 'aqua_parse'."
license = "MIT"
repository = "https://github.com/hldprk/aqua_parse"
documentation = "https://docs.rs/aqua_parse_macro"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro=true

[dependencies]
proc-macro2 = "1.0.29"
quote = "1.0.9"
syn = { version = "1.0.77", features = ["full", "extra-traits"] }