[package]
name = "resrap"
version = "0.10.0"
edition = "2018"
description = "A parser library."
license = "MIT"
repository = "https://github.com/hldprk/resrap"
documentation = "https://docs.rs/resrap"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
resrap_proc_macro = { path = "../resrap_proc_macro", version="0.5.0" }
regex = "1.5.4"
ansi_term = "0.12.1"