[package]
name = "resrap"
version = "0.19.0"
edition = "2021"
description = "A parser library."
license = "MIT"
repository = "https://github.com/hldprk/resrap"
documentation = "https://docs.rs/resrap"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
pattern = []

[dependencies]
resrap_proc_macro = { path = "../resrap_proc_macro", version="0.9.0" }
aqua_error = { path = "../../aqua/aqua_error", version="0.1.0" }
regex = "1.5.4"
