[package]
name = "resrap_proc_macro"
version = "0.1.0"
edition = "2018"
keywords = ["parser", "macro", "derive"]
description = "Macros for resrap."
license = "MIT"
repository = "https://github.com/hldprk/resrap"
documentation = "https://docs.rs/resrap_proc_macro"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro=true

[dependencies]
proc-macro2 = "1.0.29"
quote = "1.0.9"
syn = { version = "1.0.77", features = ["full"] }